tests/transpiler/x/java/bool_chain.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 14:23:50 UTC
public class Main {
    static int boom() {
        System.out.println("boom");
        return true;
    }
    public static void main(String[] args) {
        System.out.println(((1 < 2) && (2 < 3) && (3 < 4) ? 1 : 0));
        System.out.println(((1 < 2) && (2 > 3) && boom() ? 1 : 0));
        System.out.println(((1 < 2) && (2 < 3) && (3 > 4) && boom() ? 1 : 0));
    }
}
